--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
       </p>
     </section>
 
+    <h2>Você realmente me ama?</h2>
+    <div class="botão">
+      <Button>SIM</Button>
+      <BUTTon id='btn' onmouseover="desvia()">NÃO    </BUTTon>
+    </div>
+
     <!-- Rodapé -->
     <footer class="footer">
       <p>© 2025 - Feito com 💖 por Caio para Carol</p>
