--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     <div class="carousel">
       <button class="prev">&#10094;</button>
       <div class="slides">
-        <img src="img1.png.jpeg" alt="Foto 1">
-        <img src="img2.png.jpeg" alt="Foto 2">
-        <img src="img3.png.jpeg" alt="Foto 3">
-        <img src="img4.png.jpeg" alt="Foto 4">
-        <img src="img5.png.jpeg" alt="Foto 5">
-        <img src="img6.png.jpeg" alt="Foto 6">
-        <img src="img7.png.jpeg" alt="Foto 7">
-        <img src="img8.png.jpeg" alt="Foto 8">
-        <img src="img9.png.jpeg" alt="Foto 9">
+        <img src="1.png" alt="Foto 1">
+        <img src="2.png" alt="Foto 2">
+        <img src="3.png" alt="Foto 3">
+        <img src="4.png" alt="Foto 4">
+        <img src="5.png" alt="Foto 5">
+        <img src="6.png" alt="Foto 6">
+        <img src="7.png" alt="Foto 7">
+        <img src="8.png" alt="Foto 8">
+        <img src="9.png" alt="Foto 9">
+        <img src="10.png" alt="Foto 10">
+        <img src="11.png" alt="Foto 10">
       </div>
       <button class="next">&#10095;</button>
     </div>
@@ -35,6 +37,8 @@
     <!-- Indicadores -->
     <div class="dots">
       <span class="dot active"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
@@ -60,9 +64,15 @@
     </section>
 
     <h2>Você realmente me ama?</h2>
+    <a href="sim.html">
     <div class="botão">
-      <Button>SIM</Button>
-      <BUTTon id='btn' onmouseover="desvia()">NÃO    </BUTTon>
+        <Button class="btnyes" >SIM</Button>
+        
+    </div>
+    </a>
+    <div class="botão">
+    
+      <BUTTon id='btn' onmouseover="desvia(this)" class="btnno">NÃO    </BUTTon>
     </div>
 
     <!-- Rodapé -->
